# todo_rust

./: README.md  docker-compose.yml
back/: Cargo.toml  Dockerfile
back/http_test/: test.http
back/src/: application.rs  main.rs
back/src/adapter/: todo_repository_impl.rs
back/src/application/: add_todo.rs  delete_todo.rs  delete_todo_use_case.rs  get_todo.rs  list_todo.rs  list_todo_summaries.rs  todo_repository.rs
back/src/application/add_todo/: add_todo_route.rs  add_todo_use_case.rs
back/src/application/delete_todo/: delete_todo_route.rs  delete_todo_use_case.rs
back/src/application/get_todo/: get_todo_route.rs  get_todo_use_case.rs
back/src/application/list_todo/: list_todo_route.rs  list_todos_use_case.rs
back/src/application/list_todo_summaries/: list_todo_summaries_route.rs  list_todo_summaries_use_case.rs
back/src/domain/: todo.rs
front/: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  package-lock.json
front/assets/: main.css  tailwind.css
front/src/: adapter.rs  main.rs  pages.rs
front/src/adapter/: todo_client.rs
front/src/components/: divider.rs
front/src/domain/: todo.rs
front/src/layouts/: menu.rs
front/src/pages/: home.rs  todo.rs
front/src/pages/about/: about.rs  about_page.rs
front/src/pages/home/: home.rs  home_page.rs  todo_card.rs
front/src/pages/todo/: add.rs  detail.rs  list.rs  todo_page.rs
front/src/pages/todo/add/: todo_add_page.rs
front/src/pages/todo/detail/: todo_detail_page.rs
front/src/pages/todo/list/: todo_card.rs  todo_list_page.rs
front/src/utils/: log.rs
