[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
#dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
